fix: preserve NLS markers and layout during encoding cleanup
Skip canonical charset no-ops without disabling aggregation or FQN shortening.
Replace exact argument ranges and use the JDT NLS scanner to remove and
renumber only affected tags. Preserve continuation indentation and line
separators, and coalesce multiple edits before replacing a statement/try body.

Add 14 native regression cases with output compilation and NLS diagnostics.
Local verification: 13 source-edit checks and Java 21 syntax parsing passed;
full Eclipse/Tycho verification remains required in CI.

Refs #1608
Assisted-by: OpenAI ChatGPT